syntax = "proto3";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "Presentation";

package calendar;

service CalendarHandler {
	rpc GetCalendars (GetCalendarsRequest) returns (GetCalendarsResponse);
	rpc CreateCalendar (CreateCalendarRequest) returns (CreateCalendarResponse);
	rpc UpdateCalendarStatus (UpdateCalendarStatusRequest) returns (UpdateCalendarStatusResponse);

}

message GetCalendarRequest {
	string Calendar_id = 1;
}

message GetCalendarResponse {
	repeated Calendar Calendars = 1;
}

message CreateCalendarRequest {
	string name = 1;
	string description = 2;
	string date = 3;
	string time = 4;
}

message CreateCalendarResponse {
	bool success = 1;
	string Calendar_id = 2;
}

message UpdateCalendarStatusRequest {
	string Calendar_id = 1;
	CalendarStatus status = 2;
}

message UpdateCalendarStatusResponse {
	bool success = 1;
	string message = 2;
	Calendar update_Calendar =3;
}

message Calendar {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp date = 4;
  google.protobuf.Timestamp time = 5;
  CalendarStatus status = 6;
}

enum CalendarStatus {
  UNKNOWN = 1;
  BOOKED = 2;
  EMPTY = 3;
  CANCELED = 4;
}